cfk/bootstrap-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-bootstrap-lb
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: kafka
    clusterId: default
    confluent-platform: "true"
    type: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
      protocol: TCP
